kubernetes-networks/gatewayClass.yaml
# gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  namespace: default
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: default
spec:
  controllerName: traefik.io/gateway-controller
