kubernetes-networks/deployment_cat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        readinessProbe:
          exec:
            command:
            - cat
            - /usr/share/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm /usr/share/nginx/html/index.html"]
        readinessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
        - name: html
          emptyDir: {}
      nodeSelector:
          worknode: first
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
     maxSurge: 2
