kubernetes-networks/helper-busibox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-infinity
  namespace: homework
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo 'Running infinitely...'; sleep 30; done"]
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
  restartPolicy: Always
