kubernetes-networks/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80          # Порт сервиса внутри кластера
      targetPort: 80    # Порт пода
      nodePort: 30007   # Порт на нодах (30000-32767)
  type: NodePort
