kubernetes-networks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: homework
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "demo.otus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-service
          port: 80
